[gd_scene load_steps=15 format=3 uid="uid://cqrsgqrv40hao"]

[ext_resource type="Script" path="res://Enemy/enemy_bat.gd" id="1_8tyjn"]
[ext_resource type="Shader" uid="uid://brmuho5g1qbxv" path="res://Enemy/hitflash.tres" id="2_8ogff"]
[ext_resource type="Texture2D" uid="uid://beeihhom8wia0" path="res://Textures/Enemy/enemy_eyebat.png" id="2_042st"]
[ext_resource type="PackedScene" uid="uid://8qpqxca3v05p" path="res://Utility/hurt_box.tscn" id="3_acmkr"]
[ext_resource type="PackedScene" uid="uid://bfcmpfltcfccm" path="res://Utility/hit_box.tscn" id="4_4se32"]
[ext_resource type="AudioStream" uid="uid://bbw71khcsg613" path="res://Audio/SoundEffect/enemy_hit.ogg" id="5_h2xl3"]
[ext_resource type="PackedScene" uid="uid://drbow2l4igbn6" path="res://Utility/soft_collision_box.tscn" id="6_q22q2"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_552sf"]
resource_local_to_scene = true
shader = ExtResource("2_8ogff")
shader_parameter/enabled = false
shader_parameter/ALPHA = null
shader_parameter/tint = Color(0.752941, 0.811765, 0.839216, 1)

[sub_resource type="Animation" id="Animation_fndc4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_w2ybo"]
resource_name = "death"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.75), Color(1, 1, 1, 0.5), Color(1, 1, 1, 0.25), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_pm3nj"]
resource_name = "walk"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ajlna"]
_data = {
"RESET": SubResource("Animation_fndc4"),
"death": SubResource("Animation_w2ybo"),
"walk": SubResource("Animation_pm3nj")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8y70w"]
size = Vector2(16, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x4r0h"]
size = Vector2(13, 18)

[node name="enemy_bat" type="CharacterBody2D" groups=["enemy", "flockable"]]
scale = Vector2(0.7, 0.7)
collision_layer = 4
collision_mask = 4
motion_mode = 1
script = ExtResource("1_8tyjn")
movement_speed = 300.0
hp = 2

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_552sf")
texture = ExtResource("2_042st")
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ajlna")
}
speed_scale = 0.7

[node name="HurtBox" parent="." instance=ExtResource("3_acmkr")]
visible = false
position = Vector2(-1.42857, 0)
collision_mask = 52
HurtBoxType = 1

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(2, 2)
shape = SubResource("RectangleShape2D_8y70w")

[node name="HitBox" parent="." instance=ExtResource("4_4se32")]
visible = false
position = Vector2(-4.28571, 4.28571)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" parent="HitBox" index="0" groups=["attacks"]]
position = Vector2(3.47659, -1.37956)
shape = SubResource("RectangleShape2D_x4r0h")

[node name="snd_hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_h2xl3")
volume_db = -17.0
pitch_scale = 0.9

[node name="UltRecovery" type="Timer" parent="." groups=["enemy"]]
one_shot = true

[node name="RushingTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="RushTimer" type="Timer" parent="RushingTimer"]
wait_time = 2.0
one_shot = true

[node name="DebuffTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="SoftCollisionBox" parent="." instance=ExtResource("6_q22q2")]
visible = false

[node name="CollisionShape2D" parent="SoftCollisionBox" index="0"]
position = Vector2(5.96046e-08, 2.85714)

[node name="HideTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]
[connection signal="hurt_ult" from="HurtBox" to="." method="_on_hurt_box_hurt_ult"]
[connection signal="timeout" from="UltRecovery" to="." method="_on_ult_recovery_timeout"]
[connection signal="timeout" from="DebuffTimer" to="." method="_on_debuff_timer_timeout"]
[connection signal="timeout" from="HideTimer" to="." method="_on_hide_timer_timeout"]

[editable path="HurtBox"]
[editable path="HitBox"]
[editable path="SoftCollisionBox"]
